<resources>
    <string name="app_name">Remotely Jobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="find_your_job">Find Your Job</string>
    <string name="software_development">SoftWare Development</string>
    <string name="graphic_designer">Graphic Designer</string>
    <string name="marketing">Marketing</string>
    <string name="customer_services">Customer Services</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="title">Title</string>
    <string name="today">Today</string>
    <string name="job_title">Job Title</string>
    <string name="job_type">job type</string>
    <string name="job_location">Job location</string>
    <string name="company_name">Company Name</string>
</resources>