<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/recyclerview_item_shae"
    android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/logoLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/job_title"
                android:textColor="@color/primaryDark"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:maxLength="30"
                android:textStyle="bold"
                />

                <ImageButton
                    android:id="@+id/ibDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_delete_24" />

            <TextView
                android:id="@+id/tv_job_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="4dp"
                android:text="@string/job_type"
                android:textSize="17sp"
                android:textColor="@color/primaryDark"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                app:drawableTint="@color/primaryDark"
                app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:text="@string/today"
                android:textSize="17sp"
                android:padding="8dp"
                android:textColor="@color/primaryDark"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
                app:drawableTint="@color/primaryDark" />
<!--            <TextView-->
<!--                android:id="@+id/tv_job_location"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:text="@string/job_location"-->
<!--                android:textSize="17sp"-->
<!--                android:maxLength="20"-->
<!--                android:fontFamily="@font/roboto_regular"-->
<!--                android:textColor="@color/primaryDark"-->
<!--                android:gravity="center_vertical"-->
<!--                app:drawableTint="@color/primaryDark"-->
<!--                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />-->


        </LinearLayout>
    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCompanyLogo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_remotely_jobs_logo"
            android:padding="8dp"
            app:shapeAppearanceOverlay="@style/RoundedShape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>